.local-manifest/registry/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-frontend

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: registry-frontend

  template:
    metadata:
      labels:
        app: registry-frontend
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false

      containers:
        - name: registry-frontend
          image: joxit/docker-registry-ui:2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
