.local-manifest/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry

spec:
  type: ClusterIP
  clusterIP: 10.43.11.193
  selector:
    app: registry
  ports:
    - name: http
      port: 80
      targetPort: http
